# gpu_programming_samples

./: README.md
source/: CMakeLists.txt
source/cmake/: findROCM.cmake  google_test.cmake.in
source/lib/: CMakeLists.txt
source/lib/include/: device.h  gpu_cuda.h  gpu_rocm.h  lib.h
source/lib/src/: lib.cpp
source/lib/src/cuda/: CMakeLists.txt  lib.cu
source/lib/src/rocm/: CMakeLists.txt  lib.hip.cu
source/lib/tests/: CMakeLists.txt  test_lib.cc
source/main/: main.cpp
